store/src/styles/components/kiosk.scss
/* ... */
.hern-kiosk__menu-product-header--full-view {
   padding: 0;
   margin-bottom: 5px;
   .ant-carousel {
      width: 100%;
   }
}
.hern-kiosk__menu-product-background-shadow {
   position: absolute;
   top: 0;
   height: 100%;
   left: 0;
   width: 100%;
   border-radius: 0.5em;
   background: linear-gradient(180deg, #e5f0f7 0%, rgba(229, 240, 247, 0) 100%);
}
.product_image {
   display: flex !important;
   justify-content: center !important;
}
.hern-kiosk__kiosk-product-images-carousal {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
}

.hern-kiosk__menu-product-content {
   display: flex;
   flex-direction: column;
}
.hern-kiosk__menu-product-name {
   font-size: 1.3em;
   font-weight: 700;
   display: flex;
   gap: 8px;
   > svg {
      transform: translateY(5px);
   }
}
.hern-kiosk__menu-product-description {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 1.1em;
}
.hern-kiosk__menu-product-price {
   padding-top: 5px;
}
.hern-kiosk__kiosk-button {
   background: linear-gradient(90deg, #ffd45f -3.04%, #f7b502 104.56%);
   border-radius: 0.2em;
   //   width: 14em;
   // height: 5em;
   font-style: normal;
   font-weight: 800;
   font-size: 1.2em;
   line-height: 2em;
   text-transform: uppercase;
   color: #5a5a5a;
}
.hern-kiosk__kiosk-button-linear {
   border-radius: 0.2em;
   //   width: 14em;
   // height: 5em;
   font-style: normal;
   font-weight: 800;
   font-size: 1.2em;
   line-height: 2em;
   text-transform: uppercase;
   color: #5a5a5a;
}
.hern-kiosk__kiosk-button--disabled {
   opacity: 0.6;
}
// kiosk modifier
.hern-kiosk__menu-product-modifier-popup {
   position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
   width: 100vw;
   // background: #00406ae5;
   z-index: 100000000;
   display: flex;
   justify-content: center;
   align-items: center;
}
.hern-kiosk__menu-product-modifier-pop-up-container {
   height: 80vh;
   width: 80vw;
   // background-color: red;
   // margin: 5em 0 0 0;
   border-radius: 2.5em;
   position: relative;
}
.hern-kiosk__menu-product-modifier-pop-up-scrollPart {
   height: 90%;
   overflow-y: auto;
   //background-color: var(--hern-primary-color);
}
.hern-kiosk__menu-product-modifier-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   // border-radius: 2.5em 2.5em 0 0;
}
.hern-kiosk__additional-modifier {
   padding: 1.3em;
   margin: 0.625em 1.06em;
   border-radius: 0.625em;
}
.hern-kiosk__additional-modifier-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
}
.hern-kiosk__additional-modifier-label {
   font-size: 1.8em;
   font-weight: 500;
}
.hern-kiosk__additional-modifier-customize {
   font-size: 1.8em;
   font-weight: 500;
   text-decoration: underline;
}
.hern-kiosk__menu-product-modifier-header .ant-carousel {
   height: 680px;
   width: 680px;
}
.hern-kiosk__menu-product-modifier-customize-text {
   position: absolute;
   width: 246px;
   height: 32px;
   left: 30px;
   top: 35px;
   // font-family: Nunito;
   font-style: normal;
   font-weight: bold;
   font-size: 30px;
   line-height: 32px;
   text-transform: uppercase;
   color: #ffffff;
   z-index: 1;
}
.hern-kiosk__menu-product-modifier-header-image {
   height: 48.5em;
}
.hern-kiosk__menu-product-modifier-brief {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 5em;
   position: sticky;
   top: 0;
   padding: 2em;
   z-index: 2;
}
.hern-kiosk__menu-product-modifier-p-name {
   font-size: 2em;
   font-weight: 700;
}
.hern-kiosk__menu-product-modifier-p-price {
   font-size: 2em;
   font-weight: 700;
}
.hern-kiosk__product-modifier-p-additional-text {
   margin: 1em 2em;
   font-size: 1.9em;
   font-weight: 500;
   > span {
   }
}
.hern-kiosk__modifier-popup-product-options {
   display: flex;
   justify-content: center;
   align-items: center;
   position: sticky;
   top: 5em;
   height: 5em;
   z-index: 2;
}
.hern-kiosk__modifier-product-option {
   margin: 0 0.5em;
   border-radius: 0.4em;
   font-size: 1.5em;
   padding: 0.5em 0.8em;
}
.hern-kiosk__modifier-product-option--disabled {
   opacity: 0.6;
}
.hern-kiosk__modifier-popup-product-options .ant-radio-button-wrapper {
   font-size: 1.5rem;
}

.hern-kiosk__modifier-popup-modifiers-list {
   margin: 2em;
   height: 42em;
   overflow-y: auto;
}
.hern-kiosk__modifier-popup-modifier-category {
   padding: 1.3em;
   border-radius: 0.625em;
   margin: 0.625em 1.06em;
}
.hern-kiosk__modifier-popup-modifier-category--nested {
   padding: 1.3em 0;
   margin: 0.625em 0;
}

.hern-kiosk__modifier-category-label {
   display: flex;
   align-items: center;
   margin-bottom: 1em;
   // font-family: Nunito;
   font-style: normal;
   font-weight: bold;
   font-size: 1.7em;
   line-height: 1.625em;
   .hern-kiosk__modifier-category-mark {
   }
   .hern-kiosk__modifier-category-label-text {
      text-transform: capitalize;
      margin: 0 1em;
      font-size: 1.1em;
      font-weight: 600;
   }
   .hern-kiosk__modifier-category-selection-condition {
      color: #ffffff;
      // margin-right: 1em;
   }
}
.hern-kiosk__modifier-category-option {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 1em 0;
   .hern-kiosk__modifier-category-right {
      display: flex;
      align-items: center;
   }
   position: relative;
}
.hern-kiosk__modifier-option-customize {
   position: absolute;
   // right: 0;
   // bottom: -10px;
   font-size: 20px;
   text-decoration: underline;
}
.hern-kiosk__modifier-category-option-image {
   width: 6.5em;
   height: 6.5em;
}

.hern-kiosk__modifier-popup-footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
   width: 100%;
   padding: 20px;
   height: 5.8vh;
   border-radius: 0em 0em 2.5em 2.5em;
}
/* ... */

